<resources>
    <string name="app_name">TeleCaller</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="question">All good?</string>
    <string name="noAnswer">No Answer</string>
    <string name="callLater">Call Later</string>
    <string name="received">Received</string>
    <string name="feedback">Feedback</string>
    <string name="callMaybe">Do you want to keep calling?</string>
    <string name="submitFeedback">Submit Feadback</string>
    <string name="stopCall">Stop</string>
    <string name="login">LOGIN</string>
    <string name="call">Call</string>
    <string name="Call">Call</string>
    <string name="defaultFeedback">No feedback</string>
    <string name="enter_email">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="connect_facebook">No feedback</string>
    <string name="logout">Logout</string>
    <string name="isLoggedIn">isLoggedIn</string>
    <string name="note">Remarks</string>
    <string name="callerName">telecallerName</string>
    <string name="defaultUser">Telecaller</string>
    <string name="noCampaignChoosen">No Choice</string>
    <string name="runningCampaign">RunningCampaign</string>
    <string name="recording">recording</string>
    <string name="leadDetailTitle">Person Detail</string>
    <string name="callHistory">Call History</string>
    <string name="submitDetailTitle">Submit Feedback</string>
    <string name="serverUrl">http://172.16.64.137:8000/</string>
    <string name="callRecords">Call Details</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>

</resources>