<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent">

    <!-- Header aligned to top -->

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center" >

            <ToggleButton
                android:id="@+id/togglebutton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textOn="GO DORMANT"
                android:textOff="GO ACTIVE"
                android:background="@drawable/toggle_button"
                android:onClick="onToggleClicked"/>

    </RelativeLayout>

    <!-- Footer aligned to bottom -->

    <RelativeLayout
    android:id="@+id/footer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:gravity="center" >

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/continueCalling"
                android:text="@string/submitFeedback"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@drawable/submit_button"
                />


    </RelativeLayout>



    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/footer"
        android:layout_below="@id/header"
        android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/accent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="On Call"
                style="@style/textMyStyle"
                android:padding="10dp">
            </TextView>
            <TextView
                android:id="@+id/personName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ravi Kumar"
                style="@style/textMyStyle"
                android:layout_marginLeft="20dp"
                android:padding="10dp"
                >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MSISDN"
                style="@style/textMyStyle"
                android:padding="10dp">
            </TextView>
            <TextView
                android:id="@+id/personNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8787878787"
                style="@style/textMyStyle"
                android:layout_marginLeft="20dp"
                android:padding="10dp"
                >
            </TextView>
        </LinearLayout>


        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <RadioButton android:id="@+id/radio_noAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/noAnswer"
                android:onClick="onRadioButtonClicked"
                android:background="?android:attr/selectableItemBackground"
                android:layout_margin="5dp"
                style="@style/textMyStyle"/>
            <RadioButton android:id="@+id/radio_callLater"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/callLater"
                android:onClick="onRadioButtonClicked"
                android:background="?android:attr/selectableItemBackground"
                android:layout_margin="5dp"
                style="@style/textMyStyle"/>
            <RadioButton android:id="@+id/radio_recieved"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/received"
                android:onClick="onRadioButtonClicked"
                android:background="?android:attr/selectableItemBackground"
                android:layout_margin="5dp"
                style="@style/textMyStyle"/>
            <RadioButton android:id="@+id/radio_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                android:onClick="onRadioButtonClicked"
                android:layout_margin="5dp"
                style="@style/textMyStyle"
                android:background="?android:attr/selectableItemBackground"
                />

        </RadioGroup>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/companyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note"
                android:layout_margin="2dp"
                android:paddingLeft="5dp"
                style="@style/textMyStyle"/>


            <EditText
                android:id="@+id/companyNameEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="1dip"
                android:paddingTop="5dip"
                android:paddingBottom="5dip"
                android:inputType="textMultiLine"
                android:lines="3"
                android:textColor="#00366d"
                android:textSize="12sp"
                android:background="@drawable/edit_text_round_corner"/>

            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:id="@+id/next"
                android:text="@string/nextCall"
                android:textSize="16sp"
                android:textStyle="italic"
                android:background="@drawable/nextcall_button"
                />

        </LinearLayout>






    </LinearLayout>




    </ScrollView>

</RelativeLayout>

